# delegate

./: CMakeLists.txt  README.md  delegate.hpp  tests.cpp
delegate/: delegate.hpp
tests/: tests.cpp
